# cockroach_db_connect

./: .env.example  .gitignore  NEXT_STEPS.md  README.md  pyproject.toml
docs/: project_idea.md
docs/architecture/: ARCHITECTURE_OUTLINE.md  IMPLEMENTATION_ROADMAP.md  PROGRESS_TRACKER.md  PROJECT_PLAN.md  UNIFIED_IMPLEMENTATION_PLAN.md
sql/: README.md
sql/queries/reconciliation/: get_table_list.sql
sql/templates/: dynamic_select_template.sql
src/cockroach_db_connect/: __init__.py  main_poc.py
