[project]
name = "cockroach-db-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Steven", email = "21993423+StevenJUlbrich@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
